<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple_star">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <!-- Добавление кнопок -->


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp">

                                <Button
                                    android:id="@+id/button1"
                                    android:layout_width="0dp"
                                    android:layout_height="200dp"
                                    android:layout_weight="1"
                                    android:backgroundTint="@color/purple"
                                    android:text="@string/button"
                                    android:textSize="20sp"

                                    />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="20dp">

                                <Button
                                    android:id="@+id/button3"
                                    android:layout_width="0dp"
                                    android:layout_height="200dp"
                                    android:layout_weight="1"
                                    android:backgroundTint="@color/purple"
                                    android:text="@string/button3"
                                    android:textSize="20sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp">

                                <Button
                                    android:id="@+id/button2"
                                    android:layout_width="0dp"
                                    android:layout_height="200dp"
                                    android:layout_weight="1"
                                    android:backgroundTint="@color/purple"
                                    android:text="@string/button2"
                                    android:textSize="20sp" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp">

                                <Button
                                    android:id="@+id/button4"
                                    android:layout_width="0dp"
                                    android:layout_height="200dp"
                                    android:layout_weight="1"
                                    android:backgroundTint="@color/purple"
                                    android:text="@string/button4"
                                    android:textSize="20sp" />

                        </LinearLayout>


                </LinearLayout>
        </ScrollView>
</RelativeLayout>
